2007-02-26  Per Bothner  <per@bothner.com>

	* CanInline.java (inline): Change so that arguments need to be walked.
	Change 2nd paramter type ExpWalker->InlineCalls.
	* QuoteExp.java (inline): Don't walkArgs before calling CanInline's
	inline method - do it wafter if we don't.
	* LambdaExp.java (inline): Move (apply (lambda ...) ...) optimization
	to InlineCalls since it needs to be done before func is walked.
	* InlineCalls.java (walkApplyExp): Do (apply (lambda ...) ...)
	optimization here.

	* ApplyExp.java (walkArgs): New method.
	* Expression.java (inline): Take extra boolean argsWalked parameter.
	* LambdaExp.java (inline): Take argsInlined parameter.
	Also inline lambda directly in function-call position.
	* QuoteExp.java (inline): Take argsInlined parameter.
	* ReferenceExp.java (inline): Take argsInlined parameter.
	* InlineCalls.java (walkApplyExp): Delegate/defer walking args to
	Expression.inline method.

2007-02-25  Per Bothner  <per@bothner.com>

	* BindingInitializer.java (emit): Don't create private ThreadLocation -
	it seems like expensive overkill.

	* BindingInitializer.java (emit): Save/set/restore source location.

2007-02-23  Per Bothner  <per@bothner.com>

	* Language.java (getTypeFor): Don't use asType, which can throw.

	* Compilation.java (generateApplyMethodsWithContext,
	generateApplyMethodsWithContext): Save/set/restore source location.

2007-02-22  Per Bothner  <per@bothner.com>

	* QuoteExp.java (print): Don't modify value field.

2007-02-19  Per Bothner  <per@bothner.com>

	* ClassExp.java (compilePushClass): If simple, return Class object.
	(setTypes): Ok to have superType (class) even if non-simple.
	* FindCapturedVars.java (walkClassExp): Warning if simple and
	needs a closure env.
	* InlineCalls.java (walkReferenceExp): Don't convert unknown to type;
	this is handeled by Scheme.checkDefaultBinding.

2007-02-18  Per Bothner  <per@bothner.com>

	* Language.java (declFromField): Convert String to Symbol.