@@ -1,3 +1,7 @@
+2007-02-27  Per Bothner  <per@bothner.com>
+
+	* lambda.java (rewriteBody): Invoke Declaration.setCanWrite here.
+
 2006-12-20  Per Bothner  <per@bothner.com>
 
 	* Makefile.am (KAWA1): Remove unneeded macro.
