@@ -1,3 +1,8 @@
+2007-02-27  Per Bothner  <per@bothner.com>
+
+	* standard/fluid_let.java (rewrite): Invoke Declaration.setCanWrite.
+	* standard/set_b.java (rewriteForm): Likewise.
+
 2007-02-26  Per Bothner  <per@bothner.com>
 
 	* standard/map.java (inline): Update for new CanInline api.
